onkelskrue/donald/donald-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: donald-svc
  labels:
    app: donald
spec:
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: donald
