onkelskrue/donald/donald-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: donald-ingress
spec:
  rules:
  - host: donald.andeby.rocks
    http:
      paths:
      - path: /
        backend:
          serviceName: donald-svc
          servicePort: 5000
